# bin-search

./: .clang-format  CMakeLists.txt  runtimes.txt
src/: baseline.hpp  main.cpp  profiler.cpp  simd-avx256.hpp  speed-test.cpp  test-generator.cpp  utils.hpp
src/include/: solution-picker.hpp  utils.hpp
src/solutions/: baseline.hpp  eytzinger.hpp  simd-avx256.hpp  stl.hpp
